Bug 479241 - Can't enter a pretty long path.
Summary: Can't enter a pretty long path.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-01 07:54 UTC by 1516494269
Modified: 2024-03-17 23:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 1516494269 2024-01-01 07:54:55 UTC
SUMMARY
I have to enter into a pretty long file path sometime. And then it reports "not found", with a truncated file path.


STEPS TO REPRODUCE
1. Run shell command `mkdir /home/afeather/3abb6677af34ac57c0ca5828fd94f9d886c26ce59a8ce60ecf6778079423dccff1d6f19cb655805d56098e6d38a1a710dee59523eed7511e5a9e4b8ccb3a4686/3abb6677af34ac57c0ca5828fd94f9d886c26ce59a8ce60ecf6778079423dccff1d6f19cb655805d56098e6d38a1a710dee59523eed7511e5a9e4b8ccb3a4686`
2. Enter the path by click the directory

OBSERVED RESULT
It reports "/home/afeather/3abb6677af34ac57c0ca5828fd94f9d886c26ce59a8ce60ecf6778079423dccff1d6f19cb655805d56098e6d38a1a710dee59523eed7511e5a9e4b8ccb3a4686/3abb6677af34ac57c0ca5828fd94f9d886c26ce59a8ce60ecf6778079423dccff1d6f19cb655805d56098e6d38a1a710dee5956 not found". (Length of the path is 247, end with "710dee5956", while the original one is 272, end with "710dee59523eed7511e5a9e4b8ccb3a4686". It got truncated)


EXPECTED RESULT
Entered the path.

SOFTWARE/OS VERSIONS
Dolphin version: dolphin 23.08.4
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.11
Comment 1 Nate Graham 2024-01-18 15:44:29 UTC
Cannot reproduce with today's git master of Dolphin and Plasma 6 Wayland.
Comment 2 Harald Sitter 2024-01-22 10:46:03 UTC
What type of filesystem is this on?
Comment 3 1516494269 2024-01-24 01:49:53 UTC
(In reply to Harald Sitter from comment #2)
> What type of filesystem is this on?

ext4. I tryed ntfs, not work, reported same thing. Well, I asked my friend, they nerver encoutered the bug.
Comment 4 Harald Sitter 2024-01-24 09:57:12 UTC
Also cannot reproduce on a fresh arch installation on ext4.
Comment 5 1516494269 2024-01-24 10:10:16 UTC
(In reply to Harald Sitter from comment #4)
> Also cannot reproduce on a fresh arch installation on ext4.

I updated my arch today, not work. It reports:

kf.kio.core: "The file or folder /home/afeather/4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865/4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865/4355a46b19d348dc2f57c046f8ef63d4538ebb936000f3c9ee954a27460dd865/4355a46b19d348dc2f57c046f8ef63d4538e5 does not exist."

Is any dependences of dolphin crashes dolphin? I tryed gdb to trace, but I ran out of memory.
Here is `pacman -Qi dolphin`
```
Name            : dolphin
Version         : 23.08.4-1
Description     : KDE File Manager
Architecture    : x86_64
URL             : https://apps.kde.org/dolphin/
Licenses        : LGPL
Groups          : kde-applications  kde-system
Provides        : None
Depends On      : baloo-widgets  knewstuff5  kio-extras  kcmutils5  kparts5  kactivities5  kuserfeedback5
Optional Deps   : kde-cli-tools: for editing file type options [installed]
                  ffmpegthumbs: video thumbnails [installed]
                  kdegraphics-thumbnailers: PDF and PS thumbnails [installed]
                  konsole: terminal panel [installed]
                  purpose5: share context menu [installed]
                  kio-admin: for managing files as administrator
Required By     : dolphin-plugins
Optional For    : None
Conflicts With  : None
Replaces        : None
Installed Size  : 12.88 MiB
Packager        : Antonio Rojas <arojas@archlinux.org>
Build Date      : Wed 06 Dec 2023 09:32:14 AM CST
Install Date    : Sun 24 Dec 2023 05:05:50 PM CST
Install Reason  : Explicitly installed
Install Script  : No
Validated By    : Signature
```
Comment 6 Harald Sitter 2024-01-24 10:14:39 UTC
Crashes wouldn't cause this type of issue. Considering you are on arch I would rather assume that you somehow misconfigured your system.
Comment 7 Bug Janitor Service 2024-01-29 12:55:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/952
Comment 8 1516494269 2024-01-29 13:03:21 UTC
(In reply to Harald Sitter from comment #6)
> Crashes wouldn't cause this type of issue. Considering you are on arch I
> would rather assume that you somehow misconfigured your system.

Sorry, I misused the word "crash". I finally discovered we must reproduce the problem like this:

0. Open a "Focus terminal panel", which is a terminal inside dolphin, without a standalone new terminal.
1. Run shell command `mkdir /home/afeather/3abb6677af34ac57c0ca5828fd94f9d886c26ce59a8ce60ecf6778079423dccff1d6f19cb655805d56098e6d38a1a710dee59523eed7511e5a9e4b8ccb3a4686/3abb6677af34ac57c0ca5828fd94f9d886c26ce59a8ce60ecf6778079423dccff1d6f19cb655805d56098e6d38a1a710dee59523eed7511e5a9e4b8ccb3a4686`
2. Enter the path by click the directory

Yeah, it is a bug while dolphin communicating with konsole. And you can use "cd THE_PATH" to reproduce the bug other than the way I put aforementioned.
Now I fixxed the bug with the help of gdb and some of tools. I'm going to put a merge request to konsole to fix it.

Thanks a million.
Comment 9 Bug Janitor Service 2024-02-24 07:34:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/957
Comment 10 Kurt Hindenburg 2024-03-17 23:40:48 UTC
Git commit 1b075680f07665b300fc755766ffef7958094a20 by Kurt Hindenburg, on behalf of afeather clong.
Committed on 17/03/2024 at 23:40.
Pushed by hindenburg into branch 'master'.

Change type of tokenBuffer to QList allow longer length of tokens.

M  +6    -3    src/Vt102Emulation.cpp
M  +3    -1    src/Vt102Emulation.h
M  +1    -1    src/autotests/Vt102EmulationTest.h

https://invent.kde.org/utilities/konsole/-/commit/1b075680f07665b300fc755766ffef7958094a20