Change type of tokenBuffer to QList allow longer length of tokens.

BUG: 479241